--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ STACK_NAME=full-stack-fastapi-project
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
 SECRET_KEY=changethis
 FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=changethis
+FIRST_SUPERUSER_PASSWORD=password
 USERS_OPEN_REGISTRATION=False
 
 # Emails
@@ -27,12 +27,12 @@ SMTP_PORT=587
 # Postgres
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=app
+POSTGRES_DB=db
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_PASSWORD=password
 
 SENTRY_DSN=
 
 # Configure these with your own Docker registry images
-DOCKER_IMAGE_BACKEND=backend
-DOCKER_IMAGE_FRONTEND=frontend
+DOCKER_IMAGE_BACKEND=adv-backend
+DOCKER_IMAGE_FRONTEND=adv-frontend
