--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,8 @@ bcrypt = "4.0.1"
 pydantic-settings = "^2.2.1"
 sentry-sdk = {extras = ["fastapi"], version = "^1.40.6"}
 pyjwt = "^2.8.0"
+asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
