--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,8 @@ sentry-sdk = {extras = ["fastapi"], version = "^1.40.6"}
 pyjwt = "^2.8.0"
 asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
+fastcrud = "^0.13.1"
+pytest-asyncio = "^0.23.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
