--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -66,7 +66,8 @@ services:
     command: /start-reload.sh
 
   frontend:
-    restart: "no"
+    restart: "always"
+#    command: npm run dev
     build:
       context: ./frontend
       args:
