--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,17 @@
 server {
-  listen 80;
+    listen 80;
 
-  location / {
+    server_name localhost;
+
     root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri /index.html =404;
-  }
+    index index.html;
 
-  include /etc/nginx/extra-conf.d/*.conf;
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
