--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,42 +1,45 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A Quasar Project",
+  "productName": "muFullStack",
+  "author": "Jakub Nowakowski <jaknowysolutions@gmail.com>",
   "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "biome check --apply-unsafe --no-errors-on-unmatched --files-ignore-unknown=true ./",
-    "preview": "vite preview",
-    "generate-client": "openapi-ts --input ./openapi.json --output ./src/client --client axios --exportSchemas true && biome format --write ./src/client"
+    "lint": "eslint --ext .js,.ts,.vue ./",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build"
   },
   "dependencies": {
-    "@chakra-ui/icons": "2.1.1",
-    "@chakra-ui/react": "2.8.2",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@tanstack/react-query": "^5.28.14",
-    "@tanstack/react-query-devtools": "^5.28.14",
-    "@tanstack/react-router": "1.19.1",
-    "axios": "1.6.2",
-    "form-data": "4.0.0",
-    "framer-motion": "10.16.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "7.49.3",
-    "react-icons": "5.0.1"
+    "axios": "^1.2.1",
+    "vue-i18n": "^9.2.2",
+    "pinia": "^2.0.11",
+    "@quasar/extras": "^1.16.4",
+    "quasar": "^2.16.0",
+    "vue": "^3.4.18",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.1",
-    "@hey-api/openapi-ts": "^0.34.1",
-    "@tanstack/router-devtools": "1.19.1",
-    "@tanstack/router-vite-plugin": "1.19.0",
-    "@types/node": "20.10.5",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.13"
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "vite-plugin-checker": "^0.6.4",
+    "vue-tsc": "^1.8.22",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
+    "@types/node": "^20.5.9",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@quasar/app-vite": "^2.0.0-beta.12",
+    "autoprefixer": "^10.4.2",
+    "typescript": "~5.3.0"
+  },
+  "engines": {
+    "node": "^24 || ^22 || ^20 || ^18",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
