--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
 fastcrud = "^0.13.1"
 pytest-asyncio = "^0.23.7"
+sqladmin = "^0.18.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
